--- a/ui/index.html
+++ b/ui/index.html
@@ -17,282 +17,27 @@
 </head>
 
 <body>
-    <header class="py-5 header">
-        <div class="container-xl">
-            <nav class="navbar navbar-expand-lg navbar-dark">
-                <div class="container-fluid">
-                    <a class="navbar-brand" href="#">
-                        <img class="logo img-fluid" src="build/img/FrailesFitLogo2.avif" alt="Logo del Gimnasio">
-                    </a>
 
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false"
-                        aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
+    <div id="header"></div>
 
-
-                    <div class="collapse navbar-collapse justify-content-center" id="navbarScroll">
-                        <ul class="navbar-nav my-2 my-lg-0 text-center navbar-nav-scroll">
-                            <li class="nav-item">
-                                <a class="nav-link active" href="index.html">Inicio</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="servicios.html">Servicios</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="entrenadores.html">Entrenadores</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="horarios.html">Horarios</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="instalaciones.html">Instalaciones</a>
-                            </li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" id="navbarScrollingDropdown" role="button"
-                                    data-bs-toggle="dropdown" aria-expanded="false">
-                                    Tienda
-                                </a>
-                                <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="membresias.html">Suplementación</a></li>
-                                    <li><a class="dropdown-item" href="ofertas.html">Merchandising</a></li>
-                                </ul>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="contacto.html">Contacto</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </nav>
-        </div>
-
-
-        <div class="container-xl mt-5 text-center">
-            <h3 class="heading fs-1 ">
-                ¡Lleva tu entrenamiento al siguiente nivel en <span class="fw-bold frailes">Frailes<span
-                        class="text-white">Fit</span></span>!
-            </h3>
-            <div class="heading-data d-flex justify-content-start align-items-end flex-column">
-                <a class="telefono text-decoration-none fw-bold text-white" href="tel:626879633"><i
-                        class="fas fa-phone-alt"></i> 626-879-633</a>
-                <a class="correo text-decoration-none fw-bold text-white" href="mailto:info@frailesfit.com"><i
-                        class="fas fa-envelope"></i> enriqueatienzaalvarez@gmail.com</a>
-            </div>
-
-        </div>
-    </header>
     <main class="m-5 p-md-5">
 
-        <section id="servicios" class="container my-5">
-            <!-- Título centrado -->
-            <h2 class="text-center my-5 fs-3 fw-bold mb-4 galeriaHeader">Horarios y Reglas</h2>
-
-            <div class="row">
-                <!-- Tarjeta 1 -->
-                <div class="col-md-6 col-12 mb-4">
-                    <div class="card border-0 rounded">
-                        <img src="build/img/horario.avif" class="card-img-top rounded" alt="Imagen Servicio 1">
-                        <div class="card-body text-center">
-                            <p class="card-text fw-bold">Nuestros Horarios</p>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Tarjeta 2 -->
-                <div class="col-md-6 col-12 mb-4">
-                    <div class="card border-0 rounded">
-                        <img src="build/img/reglas.avif" class="card-img-top rounded" alt="Imagen Servicio 2">
-                        <div class="card-body text-center">
-                            <p class="card-text fw-bold">Nuestras Reglas</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-
-        <section class="d-grid img-fluid nosotros">
-            <div class="contenido-nosotros">
-                <h2 class="fw-bold">Sobre FrailesFit</h2>
-                <h5 class="sobrenosotros-intro">Tu gimnasio en Frailes, comprometidos con tu bienestar.</h5>
-                <p>En FrailesFit nos enfocamos en ofrecerte un espacio cercano y cómodo donde puedas alcanzar tus
-                    objetivos de forma progresiva y segura. Estamos en Frailes, Jaén, y nuestra misión es ayudarte a
-                    mejorar tu calidad de vida a través del ejercicio. Con instalaciones bien equipadas y un equipo
-                    dispuesto a apoyarte en cada paso, buscamos que cada entrenamiento sea una experiencia agradable. Ya
-                    sea que quieras ponerte en forma, mantenerte activo o empezar tu camino hacia un estilo de vida más
-                    saludable, en FrailesFit te damos el espacio para hacerlo a tu ritmo.</p>
-            </div>
-        </section>
-
-
-        <section class="container-xl py-5 animacion">
-            <h2 class="text-center galeriaHeader fw-bold my-5">Galería</h2>
-            <ul class="row list-unstyled galeria">
-                <li class="col-md-6 col-lg-4">
-                    <a data-bs-toggle="modal" data-bs-target="#modal-imagen" data-bs-imagen="cliente5">
-                        <img class="img-fluid my-3" src="build/img/clientes/cliente5.avif" alt="imagen galeria">
-                    </a>
-                </li>
-                <li class="col-md-6 col-lg-4">
-                    <a data-bs-toggle="modal" data-bs-target="#modal-imagen" data-bs-imagen="cliente8">
-                        <img class="img-fluid my-3" src="build/img/clientes/cliente8.avif" alt="imagen galeria">
-                    </a>
-                </li>
-                <li class="col-md-6 col-lg-4">
-                    <a data-bs-toggle="modal" data-bs-target="#modal-imagen" data-bs-imagen="cliente10">
-                        <img class="img-fluid my-3" src="build/img/clientes/cliente10.avif" alt="imagen galeria">
-                    </a>
-                </li>
-                <li class="col-md-6 col-lg-4">
-                    <a data-bs-toggle="modal" data-bs-target="#modal-imagen" data-bs-imagen="cliente15">
-                        <img class="img-fluid my-3" src="build/img/clientes/cliente15.avif" alt="imagen galeria">
-                    </a>
-                </li>
-                <li class="col-md-6 col-lg-4">
-                    <a data-bs-toggle="modal" data-bs-target="#modal-imagen" data-bs-imagen="cliente20">
-                        <img class="img-fluid my-3" src="build/img/clientes/cliente20.avif" alt="imagen galeria">
-                    </a>
-                </li>
-                <li class="col-md-6 col-lg-4">
-                    <a data-bs-toggle="modal" data-bs-target="#modal-imagen" data-bs-imagen="cliente23">
-                        <img class="img-fluid my-3" src="build/img/clientes/cliente23.avif" alt="imagen galeria">
-                    </a>
-                </li>
-                <li class="col-md-6 col-lg-4">
-                    <a data-bs-toggle="modal" data-bs-target="#modal-imagen" data-bs-imagen="cliente24">
-                        <img class="img-fluid my-3" src="build/img/clientes/cliente24.avif" alt="imagen galeria">
-                    </a>
-                </li>
-                <li class="col-md-6 col-lg-4">
-                    <a data-bs-toggle="modal" data-bs-target="#modal-imagen" data-bs-imagen="cliente27">
-                        <img class="img-fluid my-3" src="build/img/clientes/cliente27.avif" alt="imagen galeria">
-                    </a>
-                </li>
-                <li class="col-md-6 col-lg-4">
-                    <a data-bs-toggle="modal" data-bs-target="#modal-imagen" data-bs-imagen="cliente39">
-                        <img class="img-fluid my-3" src="build/img/clientes/cliente39.avif" alt="imagen galeria">
-                    </a>
-                </li>
-            </ul>
-        </section>
-
-        <!-- Modal -->
-        <div class="modal fade" id="modal-imagen" tabindex="-1">
-            <div class="modal-dialog modal-lg modal-dialog-centered">
-                <div class="modal-content">
-                    <div class="modal-body text-center">
-                        <!-- Aquí se insertará la imagen dinámicamente -->
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <!--  -->
-
-        <h3 class="text-center fs-2 fw-bold planes m-5">Planes</h3>
-        <section class="py-5">
-            <div class="container-xl">
-                <div class="row justify-content-center mt-4">
-                    <div class="col-md-10">
-                        <div class="row nuestros-planes">
-
-                            <div class="col-md-4 order-2 plan inicio mb-4 mb-md-0">
-                                <h3 class="text-center fw-bold">Inicio</h3>
-                                <p class="text-center precio">4€ Día</p>
-                                <ul class="list-unstyled">
-                                    <li class="text-center mb-2">Rutinas!</li>
-                                    <li class="text-center mb-2">Cercania</li>
-                                    <li class="text-center mb-2">Trato Personalizado</li>
-                                </ul>
-                                <div class="d-flex justify-content-center align-items-center">
-                                    <script src="https://cdn.lordicon.com/lordicon.js"></script>
-                                    <lord-icon src="https://cdn.lordicon.com/cukgelaw.json" trigger="hover"
-                                        stroke="light" style="width:200px;height:200px">
-                                    </lord-icon>
-                                </div>
-                            </div>
-
-                            <div class="col-md-4 order-1 order-md-2 plan negocio mb-4">
-                                <h3 class="text-center fw-bold">Bonos</h3>
-                                <p class="text-center precio">Mes 30€</p>
-                                <ul class="list-unstyled">
-                                    <li class="text-center mb-2">10 Días 15€</li>
-                                    <li class="text-center mb-2">Bono Familiar:</li>
-                                    <li class="text-center mb-2">50€</li>
-                                </ul>
-                                <div class="d-flex justify-content-center align-items-center">
-                                    <script src="https://cdn.lordicon.com/lordicon.js"></script>
-                                    <lord-icon src="https://cdn.lordicon.com/kkdnopsh.json" trigger="hover"
-                                        stroke="light" state="hover-spending" style="width:200px;height:200px">
-                                    </lord-icon>
-                                </div>
-                            </div>
-
-                            <div class="col-md-4 order-3 plan pro">
-                                <h3 class="text-center fw-bold">Clases</h3>
-                                <p class="text-center precio">25€ Mes</p>
-                                <ul class="list-unstyled">
-                                    <li class="text-center mb-2">Zumba y Pilates</li>
-                                    <li class="text-center mb-2">5€ Clase</li>
-                                </ul>
-                                <div class="d-flex justify-content-center align-items-center">
-                                    <script src="https://cdn.lordicon.com/lordicon.js"></script>
-                                    <lord-icon src="https://cdn.lordicon.com/cukgelaw.json" trigger="hover"
-                                        stroke="light" style="width:200px;height:200px">
-                                    </lord-icon>
-                                </div>
-                            </div>
-
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
+        <div id="servicios"></div>
+        <div id="nosotros"></div>
+        <div id="galeria"></div>
+        <div id="planes"></div>
 
     </main>
 
-    <footer class="footer">
-        <div class="footer__container">
-            <div class="footer__row">
-                <div class="footer__widget">
-                    <img class="footer__logo" src="build/img/FrailesFitLogo2.avif" alt="Logo Podcast Fm">
-                </div>
-
-                <div class="footer__widget">
-                    <h3 class="footer__heading fw-bold fs-2">Inicio</h3>
-                    <nav class="footer_nav">
-                        <a class="footer__link" href="#">Servicios</a>
-                        <a class="footer__link" href="#">Entrenadores</a>
-                        <a class="footer__link" href="#">Horarios</a>
-                    </nav>
-                </div>
-                <div class="footer__widget">
-                    <h3 class="footer__heading fw-bold fs-2">Instalaciones</h3>
-                    <nav class="footer_nav">
-                        <a class="footer__link" href="#">Membresías</a>
-                        <a class="footer__link" href="#">Planes</a>
-                        <a class="footer__link" href="#">Promociones</a>
-                    </nav>
-                </div>
-                <div class="footer__widget">
-                    <h3 class="footer__heading fw-bold fs-2">Contacto</h3>
-                    <nav class="footer_nav">
-                        <a class="footer__link" href="#">Api</a>
-                        <a class="footer__link" href="#">Instagram</a>
-                        <a class="footer__link" href="#">Clientes</a>
-                    </nav>
-                </div>
-            </div>
-        </div>
-
-        <p class="footer__copyright">FrailesFit Todos los derechos Reservados</p>
-    </footer>
-
+    <div id="footer"></div>
 
 </body>
+
+
+<script src="js/loadSections.js"></script>
+<script src="js/galeria.js"></script>
+<script src="https://cdn.lordicon.com/lordicon.js"></script>
 <script src="Js/bootstrap.bundle.min.js"></script>
-<script src="js/app.js"></script>
+
 
 </html>
