--- a/ui/index.html
+++ b/ui/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="build/css/app.css">
     <link rel="stylesheet" href="build/css/bootstrap.min.css">
     <link rel="stylesheet" href="build/css/img.css">
-    <link rel="shortcut icon" href="build/Img/FaviCon.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="build/img/icon.avif" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 
