--- a/ui/src/pages/instalaciones.html
+++ b/ui/src/pages/instalaciones.html
@@ -41,7 +41,7 @@
 
 <script src="../../js/mapa.js" async></script>
 
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCg3M_nD2ggHGI3ahTkV9Q6ndR6aqwFA9g&callback=initMap"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=&callback=initMap"></script>
 
 
 <script src="https://cdn.lordicon.com/lordicon.js"></script>
