--- a/ui/src/pages/instalaciones.html
+++ b/ui/src/pages/instalaciones.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="../../build/css/bootstrap.min.css">
     <link rel="stylesheet" href="../../build/css/img.css">
     <link rel="icon" href="../../build/img/icon.avif" type="image/x-icon">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+
 
 
 
@@ -41,7 +43,7 @@
 
 <script src="../../js/mapa.js" async></script>
 
-<script src="https://maps.googleapis.com/maps/api/js?key=&callback=initMap"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCg3M_nD2ggHGI3ahTkV9Q6ndR6aqwFA9g&callback=initMap"></script>
 
 
 <script src="https://cdn.lordicon.com/lordicon.js"></script>
