--- a/ui/src/pages/suplementacion.html
+++ b/ui/src/pages/suplementacion.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="../../build/css/img.css">
     <link rel="icon" href="../../build/img/icon.avif" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+
 </head>
 
 <body>
