--- a/ui/src/pages/instalaciones.html
+++ b/ui/src/pages/instalaciones.html
@@ -5,20 +5,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Instalaciones</title>
+    <title>FrailesFit</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../../build/css/app.css">
-    <link rel="stylesheet" href="../../build/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../../build/css/img.css">
-    <link rel="icon" href="../../build/img/icon.avif" type="image/x-icon">
+    <link rel="stylesheet" href="/ui/build/css/app.css">
+    <link rel="stylesheet" href="/ui/build/css/bootstrap.min.css">
+    <link rel="shortcut icon" href="/ui/build/img/icon.avif" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
-
-
-
-
-</head>
+  </head>
+  
 
 <body>
 
@@ -39,15 +36,15 @@
 </body>
 
 
-<script src="../../js/loadSections.js"></script> 
+<script src="/ui/build/js/loadSections.js"></script> 
 
-<script src="../../js/mapa.js" async></script>
+<script src="/ui/build/js/mapa.js" async></script>
 
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCg3M_nD2ggHGI3ahTkV9Q6ndR6aqwFA9g&callback=initMap"></script>
 
 
 <script src="https://cdn.lordicon.com/lordicon.js"></script>
 
-<script src="../../js/bootstrap.bundle.min.js"></script>
+<script src="/ui/build/js/bootstrap.bundle.min.js"></script>
 
 </html>
