--- a/ui/src/pages/rutinas.html
+++ b/ui/src/pages/rutinas.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="../css/app.css">
 
 
-  <link rel="stylesheet" href="..css/bootstrap.min.css">
+  <link rel="stylesheet" href="../css/bootstrap.min.css">
  
 
   <link rel="shortcut icon" href="https://i.postimg.cc/WbSLphDF/icon2.avif" type="image/x-icon">
