--- a/ui/src/pages/merchandising.html
+++ b/ui/src/pages/merchandising.html
@@ -5,13 +5,20 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Instalaciones</title>
+  <title>Merchandising</title>
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700;900&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/ui/build/css/app.css">
-  <link rel="stylesheet" href="/ui/build/css/bootstrap.min.css">
-  <link rel="shortcut icon" href="/ui/build/img/icon.avif" type="image/x-icon">
+
+  <link rel="stylesheet" href="../css/app.css">
+
+
+  <link rel="stylesheet" href="../css/bootstrap.min.css">
+ 
+
+  <link rel="shortcut icon" href="https://i.postimg.cc/WbSLphDF/icon2.avif" type="image/x-icon">
+
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 </head>
@@ -31,9 +38,9 @@
 </body>
 
 
-<script src="/ui/build/js/loadSections.js"></script>
+<script src="../../js/loadSections.js"></script>
 <script src="https://cdn.lordicon.com/lordicon.js"></script>
-<script src="/ui/build/js/bootstrap.bundle.min.js"></script>
+<script src="../../js/bootstrap.bundle.min.js"></script>
 
 
 </html>
