--- a/ui/src/pages/instalaciones.html
+++ b/ui/src/pages/instalaciones.html
@@ -21,6 +21,8 @@
   
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+
+    <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
   </head>
   
 
@@ -43,15 +45,15 @@
 </body>
 
 
+
+
 <script src="../../js/loadSections.js"></script>
 
-<script src="../../build/js/mapa.js" async></script>
+<script src="../../js/mapa.js" async></script>
 
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCg3M_nD2ggHGI3ahTkV9Q6ndR6aqwFA9g&callback=initMap"></script>
 
-
-<script src="https://cdn.lordicon.com/lordicon.js"></script>
-
 <script src="../../js/bootstrap.bundle.min.js"></script>
+
 
 </html>
