API IMPLEMENT AND login/register

--- a/ui/src/pages/registro.html
+++ b/ui/src/pages/registro.html
@@ -38,5 +38,5 @@
 
 <script src="../../js/loadSections.js"></script>
 <script src="../../js/bootstrap.bundle.min.js"></script>
-
+<script src="../../js/registro.js"></script>
 </html>
