--- a/ui/src/pages/login.html
+++ b/ui/src/pages/login.html
@@ -38,5 +38,5 @@
 
 <script src="../../js/loadSections.js"></script>
 <script src="../../js/bootstrap.bundle.min.js"></script>
-
+<script src="../../js/login.js"></script>
 </html>
