API | Implement user payment registration in ExpressJS API

--- a/ui/src/pages/panelAdmin.html
+++ b/ui/src/pages/panelAdmin.html
@@ -5,26 +5,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Instalaciones</title>
-  
+    <title>Panel Administrador</title>
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700;900&display=swap" rel="stylesheet">
-  
+
     <link rel="stylesheet" href="../css/app.css">
-  
-  
+
+
     <link rel="stylesheet" href="../css/bootstrap.min.css">
-   
-  
+
+
     <link rel="shortcut icon" href="https://i.postimg.cc/WbSLphDF/icon2.avif" type="image/x-icon">
-  
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
-
-    <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
-  </head>
-  
+</head>
 
 <body>
 
@@ -32,11 +29,9 @@
 
     <main class="m-5 p-md-5">
 
-        <div id="padel"></div>
+        <div id="admin"></div>
+        <div id="pagos"></div>
 
-        <div id="pabellon"></div>
-
-        <div id="gym"></div>
 
     </main>
 
@@ -45,14 +40,10 @@
 </body>
 
 
-
-
 <script src="../../js/loadSections.js"></script>
-
-<script src="../../js/mapa.js" async></script>
-
 <script src="../../js/bootstrap.bundle.min.js"></script>
-
 <script src="../../js/login.js"></script>
+<script src="../../js/admin.js"></script>
+<script src="../../js/pagos.js"></script>
 
 </html>
