--- a/ui/src/pages/suplementacion.html
+++ b/ui/src/pages/suplementacion.html
@@ -42,6 +42,6 @@
 <script src="../../js/paginacion.js"></script>
 <script src="https://cdn.lordicon.com/lordicon.js"></script>
 <script src="../../js/bootstrap.bundle.min.js"></script>
-
+<script src="../../js/login.js"></script>
 
 </html>
