Implement routine creator, user preview & access control

--- a/ui/src/pages/panelUsuarios.html
+++ b/ui/src/pages/panelUsuarios.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Panel Administrador</title>
+    <title>Panel Usuarios</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -29,18 +29,8 @@
 
     <main class="m-5 p-md-5">
 
-        <div class="d-flex justify-content-center gap-3 mb-5 flex-wrap">
-            <a href="panelUsuarios.html" class="btn btn-success btn-lg">
-              <i class="fas fa-users"></i> Usuarios
-            </a>
-            <a href="panelPagos.html" class="btn btn-success btn-lg">
-              <i class="fas fa-euro-sign"></i> Pagos
-            </a>
-            <a href="panelRutinas.html" class="btn btn-success btn-lg">
-              <i class="fas fa-dumbbell"></i> Rutinas
-            </a>
-          </div>
-          
+        <div id="admin"></div>
+
 
     </main>
 
