--- a/ui/src/pages/rutinas.html
+++ b/ui/src/pages/rutinas.html
@@ -29,7 +29,7 @@
 
     <main class="m-5 p-md-5">
 
-      <!-- insertar contenido aqui a futuro -->
+      <div id="userRutina"></div>
 
     </main>
 
@@ -42,5 +42,5 @@
 <script src="https://cdn.lordicon.com/lordicon.js"></script>
 <script src="../../js/bootstrap.bundle.min.js"></script>
 <script src="../../js/login.js"></script>
-
+<script src="../../js/cargarRutinas.js"></script>
 </html>
