--- a/ui/src/pages/panelRutinas.html
+++ b/ui/src/pages/panelRutinas.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Panel Administrador</title>
+    <title>Panel Rutinas</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -29,18 +29,7 @@
 
     <main class="m-5 p-md-5">
 
-        <div class="d-flex justify-content-center gap-3 mb-5 flex-wrap">
-            <a href="panelUsuarios.html" class="btn btn-success btn-lg">
-              <i class="fas fa-users"></i> Usuarios
-            </a>
-            <a href="panelPagos.html" class="btn btn-success btn-lg">
-              <i class="fas fa-euro-sign"></i> Pagos
-            </a>
-            <a href="panelRutinas.html" class="btn btn-success btn-lg">
-              <i class="fas fa-dumbbell"></i> Rutinas
-            </a>
-          </div>
-          
+        <div id="adminRutina"></div>
 
     </main>
 
@@ -52,7 +41,6 @@
 <script src="../../js/loadSections.js"></script>
 <script src="../../js/bootstrap.bundle.min.js"></script>
 <script src="../../js/login.js"></script>
-<script src="../../js/admin.js"></script>
-<script src="../../js/pagos.js"></script>
 <script src="../../js/adminSecure.js"></script>
+<script src="../../js/rutinas.js"></script>
 </html>
