--- a/ui/src/pages/entrenadores.html
+++ b/ui/src/pages/entrenadores.html
@@ -44,4 +44,5 @@
 <script src="https://cdn.lordicon.com/lordicon.js"></script>
 <script src="../../js/bootstrap.bundle.min.js"></script>
 <script src="../../js/login.js"></script>
+<script src="./js/carrito.js"></script>
 </html>
