--- a/ui/src/pages/merchandising.html
+++ b/ui/src/pages/merchandising.html
@@ -42,5 +42,7 @@
 <script src="https://cdn.lordicon.com/lordicon.js"></script>
 <script src="../../js/bootstrap.bundle.min.js"></script>
 <script src="../../js/login.js"></script>
+<script src="../../js/carrito.js"></script>
+
 
 </html>
