--- a/ui/src/pages/panelAdmin.html
+++ b/ui/src/pages/panelAdmin.html
@@ -55,4 +55,5 @@
 <script src="../../js/admin.js"></script>
 <script src="../../js/pagos.js"></script>
 <script src="../../js/adminSecure.js"></script>
+<script src="./js/carrito.js"></script>
 </html>
