--- a/ui/src/pages/rutinas.html
+++ b/ui/src/pages/rutinas.html
@@ -43,4 +43,5 @@
 <script src="../../js/bootstrap.bundle.min.js"></script>
 <script src="../../js/login.js"></script>
 <script src="../../js/cargarRutinas.js"></script>
+<script src="../../js/carrito.js"></script>
 </html>
