form implementation for users

--- a/ui/src/pages/instalaciones.html
+++ b/ui/src/pages/instalaciones.html
@@ -55,6 +55,6 @@
 
 <script src="../../js/login.js"></script>
 
-<script src="./js/carrito.js"></script>
+<script src="../../js/carrito.js"></script>
 
 </html>
