--- a/ui/src/pages/panelRutinas.html
+++ b/ui/src/pages/panelRutinas.html
@@ -43,5 +43,5 @@
 <script src="../../js/login.js"></script>
 <script src="../../js/adminSecure.js"></script>
 <script src="../../js/rutinas.js"></script>
-<script src="./js/carrito.js"></script>
+<script src="../../js/carrito.js"></script>
 </html>
