--- a/ui/src/pages/panelUsuarios.html
+++ b/ui/src/pages/panelUsuarios.html
@@ -45,5 +45,5 @@
 <script src="../../js/admin.js"></script>
 <script src="../../js/pagos.js"></script>
 <script src="../../js/adminSecure.js"></script>
-<script src="./js/carrito.js"></script>
+<script src="../../js/carrito.js"></script>
 </html>
