--- a/ui/src/pages/registro.html
+++ b/ui/src/pages/registro.html
@@ -39,4 +39,5 @@
 <script src="../../js/loadSections.js"></script>
 <script src="../../js/bootstrap.bundle.min.js"></script>
 <script src="../../js/registro.js"></script>
+<script src="../../js/adminSecure.js"></script>
 </html>
