--- a/ui/src/pages/merchandising.html
+++ b/ui/src/pages/merchandising.html
@@ -27,7 +27,7 @@
 
     <div id="header"></div>
 
-    <main class="m-5 p-md-5">
+    <main >
 
       <div id="merch"></div>
 
@@ -39,7 +39,6 @@
 
 
 <script src="../../js/loadSections.js"></script>
-<script src="https://cdn.lordicon.com/lordicon.js"></script>
 <script src="../../js/bootstrap.bundle.min.js"></script>
 <script src="../../js/login.js"></script>
 <script src="../../js/carrito.js"></script>
