--- a/ui/src/pages/panelAdmin.html
+++ b/ui/src/pages/panelAdmin.html
@@ -30,13 +30,13 @@
     <main class="m-5 p-md-5">
 
         <div class="d-flex justify-content-center gap-3 mb-5 flex-wrap">
-            <a href="panelUsuarios.html" class="btn btn-success btn-lg">
+            <a href="panelUsuarios.html" class="adminBoton btn px-3">
               <i class="fas fa-users"></i> Usuarios
             </a>
-            <a href="panelPagos.html" class="btn btn-success btn-lg">
+            <a href="panelPagos.html" class="adminBoton btn px-3">
               <i class="fas fa-euro-sign"></i> Pagos
             </a>
-            <a href="panelRutinas.html" class="btn btn-success btn-lg">
+            <a href="panelRutinas.html" class="adminBoton btn px-3">
               <i class="fas fa-dumbbell"></i> Rutinas
             </a>
           </div>
@@ -52,6 +52,5 @@
 <script src="../../js/bootstrap.bundle.min.js"></script>
 <script src="../../js/login.js"></script>
 <script src="../../js/admin.js"></script>
-<script src="../../js/adminSecure.js"></script>
 <script src="../../js/carrito.js"></script>
 </html>
